[package]
name = "backend_assignment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend_assignment"
path = "src/main.rs"

[[bin]]
name = "mock_api"
path = "src/mock_api.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
actix-web = "4.0"